--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- =========== CSS Link Here =========== -->
 
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- =========== CSS Link Here =========== -->
 
